--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -528,7 +528,6 @@
             box-sizing: border-box;
             flex-direction: column;
             gap: 0.5rem;
-            padding: clamp(0.6rem, 1.5vw, 1rem);
             align-items: center;
             justify-content: center;
             transition: opacity 0.3s ease-in-out;
