--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -3738,7 +3738,7 @@
                 currentGameType = 'матч';
                 
                 // Show Crawford checkbox
-                if (crawfordLabel) crawfordLabel.style.display = 'block';
+                if (crawfordLabel) crawfordLabel.style.display = '';
                 if (crawfordWrapper) crawfordWrapper.style.display = 'flex';
             }
         });
