--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -1788,6 +1788,8 @@
                                     <option value="2">4</option>
                                     <option value="3" selected>8</option>
                                     <option value="4">16</option>
+                                    <option value="5">32</option>
+                                    <option value="6">64</option>
                                 </select>
                             </div>
                         </div>
@@ -1954,12 +1956,16 @@
                             <div class="match-option" data-value="2">4</div>
                             <div class="match-option" data-value="3">8</div>
                             <div class="match-option" data-value="4">16</div>
+                            <div class="match-option" data-value="5">32</div>
+                            <div class="match-option" data-value="6">64</div>
                         </div>
                         <select id="max-cube-select" style="display: none;">
                             <option value="1">2</option>
                             <option value="2">4</option>
                             <option value="3" selected>8</option>
                             <option value="4">16</option>
+                            <option value="5">32</option>
+                            <option value="6">64</option>
                         </select>
                     </div>
                 </div>
